0.0.1 Initial Release
Added support for updates, open remote list and manage xml formatted structures.
Added support for multilanguage

0.0.2 Added support for more servers
This version will use github content by default (the free server has some limited problems)